# rocket-crud

./: Cargo.toml
migrations/2021-05-31-002521_create_posts/: up.sql
migrations/2021-06-03-063702_create_users/: up.sql
restclient/: auth.http  posts.http  users.http
src/: config.rs  database.rs  lib.rs  main.rs  response.rs  routes.rs  schema.rs
src/controllers/: auth.rs  catcher.rs  mod.rs  post.rs  user.rs
src/guards/: auth.rs
src/models/: post.rs  user.rs
