[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
rocket = "0.4.10"
rocket_codegen = "0.4.10"
diesel = { version = "1.4.4", features = ["mysql", "chrono", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7"
validator = { version = "0.12", features = ["derive"] }
rust-crypto = "0.2.36"
pwhash = "1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]